--- a/EJSDIR/views/home.ejs
+++ b/EJSDIR/views/home.ejs
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>this is the template</h1>
+    <h2><%= 1+2 %></h2>
+    <h2><%= ["apple","samsung","asus"][1] %></h2>
 </body>
 </html>
