--- a/EJSDIR/views/instagram.ejs
+++ b/EJSDIR/views/instagram.ejs
@@ -9,5 +9,11 @@
     <h1>username @ <%= username %> </h1>
     <button>Follow</button>
     <button>Message</button>
+
+    <ul>
+    <% for(let name of followers) { %>
+        <li><h2><%= name %></h2></li>
+    <% } %>
+    </ul>
 </body>
 </html>
