--- a/EJSDIR/views/instagram.ejs
+++ b/EJSDIR/views/instagram.ejs
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img{ 
+            height: 150px;
+            width: 150px;
+        }
+    </style>
 </head>
 <body>
     <h1>username @ <%=  data.name %> </h1>
@@ -12,7 +18,14 @@
 
     <p>Followers = <%=  data.followers %> &nbsp;&nbsp;&nbsp;
     Following = <%=  data.following %> </p>
+    <hr/>
 
+    <%for(let post of data.posts){%>
+        <img src = "<%=post.image%>" alt="image" />
+          <p>Likes = <%=  post.likes %> &nbsp;&nbsp;&nbsp;
+             Comments = <%=  post.comments %> </p>
+
+    <%}%>
    
 </body>
 </html>
