--- a/EJSDIR/views/instagram.ejs
+++ b/EJSDIR/views/instagram.ejs
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        img{ 
-            height: 150px;
-            width: 150px;
-        }
-    </style>
-</head>
+<%-include("includes/head.ejs")%>
 <body>
     <h1>username @ <%=  data.name %> </h1>
     <button>Follow</button>
@@ -26,6 +14,6 @@
              Comments = <%=  post.comments %> </p>
 
     <%}%>
-   
+   <%- include("includes/footer.ejs")%>
 </body>
 </html>
