--- a/REST_CLASS/views/index.ejs
+++ b/REST_CLASS/views/index.ejs
@@ -12,8 +12,10 @@
         <div class = "post">
             <h3 class="user">@<%=post.username%></h3>
             <h4 class="content"> <%=post.content%></h4>
+            <a href="http://localhost:8080/posts/<%=post.id%>">click to view in detail</a>;
         </div>
 
     <%}%>
+    <a href="http://localhost:8080/posts/new">create new post</a>;
 </body>
 </html>
